--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "fullcalendar",
+  "name": "@timmalabs/fullcalendar",
   "version": "4.3.1",
   "title": "FullCalendar",
   "description": "Full-sized drag & drop event calendar",
@@ -11,18 +11,16 @@
   ],
   "homepage": "https://fullcalendar.io/",
   "docs": "https://fullcalendar.io/docs",
-  "bugs": "https://fullcalendar.io/reporting-bugs",
+  "bugs": {
+    "url": "https://fullcalendar.io/reporting-bugs"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fullcalendar/fullcalendar.git",
+    "url": "git+https://github.com/fullcalendar/fullcalendar.git",
     "homepage": "https://github.com/fullcalendar/fullcalendar"
   },
   "license": "MIT",
-  "author": {
-    "name": "Adam Shaw",
-    "email": "arshaw@arshaw.com",
-    "url": "http://arshaw.com/"
-  },
+  "author": "Adam Shaw <arshaw@arshaw.com> (http://arshaw.com/)",
   "copyright": "2019 Adam Shaw",
   "scripts": {
     "install": "monorepo install",
@@ -105,5 +103,9 @@
     "tslint-config-standard": "^8.0.1",
     "typescript": "3.4.1",
     "xhr-mock": "^2.4.1"
+  },
+  "main": "gulpfile.js",
+  "directories": {
+    "example": "examples"
   }
 }
